gpu/config: Return partial info from angle::GetSystemInfo

A filure in angle::GetSystemInfo will still return a gpu info collection
failure but partial results will be shown in about:gpu which will help
diagnosing problems.

BUG=chromium:774748

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I87dc125d72a0566dc3e3ae02b570237e654b7181
Reviewed-on: https://chromium-review.googlesource.com/721499
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: Corentin Wallez <cwallez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509103}
Former-commit-id: 2257d92b4adbf4681614c93e60553eb332bb0fb3